# pico-disp-ident

./: .gitmodules  LICENSE  README.md
hw/battery_powered/: Makefile  battery_powered.kicad_pcb  battery_powered.kicad_prl  battery_powered.kicad_pro  battery_powered.kicad_sch  fp-lib-table
hw/custom_lib/: Makefile  custom_lib.kicad_sym
hw/custom_lib/custom_lib.pretty/: 10029449-111RLF_hand.kicad_mod  1825910-7.kicad_mod  5077CR-16SMC2-BK-TR_hand.kicad_mod  742C083101JP.kicad_mod  BM03B-SRSS-TB(LF)(SN)_hand.kicad_mod  CUS01_hand.kicad_mod  C_1608m.kicad_mod  C_2012m.kicad_mod  DFE201210S-2R2M.kicad_mod  FA-238V.kicad_mod  MountingHole_2.2mm_M2.kicad_mod  MountingHole_3.2mm_M3.kicad_mod  OSL10564-IB.kicad_mod  PCA9306D.kicad_mod  RP2040.kicad_mod  RT6150B-33GQW.kicad_mod  RT6150B-33GQW_hand.kicad_mod  R_1608m.kicad_mod  R_axial.kicad_mod  Raspberry_Pi_Pico.kicad_mod  Raspberry_Pi_Pico_with_DVI_sock.kicad_mod  SKRPABE010.kicad_mod  SKRPABE010_hand.kicad_mod  SML-E12P8WT86.kicad_mod  SS12D01G4.kicad_mod  W25Q16JVSNIQ.kicad_mod  battery_wire_pad.kicad_mod  chofutech_logo_6.6mm.kicad_mod  jumper_2pole_solder.kicad_mod
hw/handmade_kit/: Makefile  handmade_kit.kicad_pcb  handmade_kit.kicad_prl  handmade_kit.kicad_pro  handmade_kit.kicad_sch  sym-lib-table
sw/: CMakeLists.txt  Makefile
sw/app/: CMakeLists.txt  cb.h  main.c
sw/tools/png2array/: Makefile  go.mod  png2array.go
